--- a/_includes/posts_carousel.html
+++ b/_includes/posts_carousel.html
@@ -1,12 +1,11 @@
 <div class='row'>
   <div class='col-md-12 text-center'>
-    <span id="post-carousel-up" class="glyphicon glyphicon-chevron-up" alt="previous" title="previous"></span>
     <hr />
   </div>
 </div>
 
 <div id="post-carousel">
-  {% for post in site.posts offset:1 %}
+  {% for post in site.posts offset:1 limit:4 %}
     <div class="post">
       <div class='row'>
         <div class='col-md-4'>
@@ -22,6 +21,13 @@
           </h3>
           <span class='linea-pin'></span>
           {{ post.date | date: "%b %-d, %Y" }}
+          <br />
+          {% if posts.tags.size > 0 %}
+            <span class='linea-tag' title='Tagged with'></span>
+          {% endif %}
+          {% for tag in posts.tags %}
+            <a href="/tag/{{ tag }}">{{ tag }}{% if !forloop.first %}, {% endif %}</a>
+          {% endfor %}
         </div>
       </div>
     </div>
@@ -29,8 +35,13 @@
 </div>
 
 <div class='row'>
-  <div class='col-md-12 text-center'>
+  <div class='col-md-5 text-center'>
     <hr />
-    <span id="post-carousel-down" class='glyphicon glyphicon-chevron-down' alt="next" title="next"></span>
+  </div>
+  <div class='col-md-2 text-center'>
+    <a href="all">All Posts</>
+  </div>
+  <div class='col-md 5 text-center'>
+    <hr />
   </div>
 </div>
