Some smaller html fixes...

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -23,7 +23,10 @@
           <b>
             full stack developer
           </b>
-          of the modern web. I express my apps business values in RSpec, capture it's behaviour in
+          of the modern web.
+        </p>
+        <p>
+          I express my apps business values in RSpec, capture it's behaviour in
           Ruby on Rails models and help Humans to interact with it's data through mobile first,
           responsive and progressive enhanced HTML5, CSS3 and JavaScript driven user interfaces.
         </p>
@@ -34,6 +37,7 @@
           <del>
             eating
           </del>
+          &nbsp;
           running the world.
         </p>
         <p>
