--- a/_includes/posts_carousel.html
+++ b/_includes/posts_carousel.html
@@ -39,7 +39,7 @@
     <hr />
   </div>
   <div class='col-md-2 text-center'>
-    <a href="all">All Posts</>
+    <a href="all">All Posts</a>
   </div>
   <div class='col-md 5 text-center'>
     <hr />
