Add things I develop on

--- a/_includes/hacks.html
+++ b/_includes/hacks.html
@@ -1,14 +1,172 @@
-<section id='blog'>
+<section id='hacks'>
   <div class='container-fluid'>
     <div class='row'>
       <div class='col-md-6'>
-        <h4 class='text-muted'>Latest Hacks</h4>
+        <h4 class='text-muted'>Things I hack</h4>
       </div>
     </div>
   </div>
-  <div class='container'>
-    <div class='row'>
-      <div class='col-md-12'></div>
+  <section>
+    <div class="container">
+      <div class="row">
+          <div class="col-md-6">
+            <h2>
+              OSEM - Event Management App
+            </h2>
+            <hr>
+            <p>
+              An Event Management App Tailored to Free Software Conferences. Helps organizers
+              with paper submission, marketing and analytics of events. I contribute to all
+              aspects of this app. From the backend over the user interface to the the landing
+              page.
+            </p>
+            <ul>
+              <li>
+                <strong>
+                  Role:
+                </strong>
+                Developer, Project Manager
+              </li>
+              <li>
+                <strong>
+                  Platform:
+                </strong>
+                Web, Android
+              </li>
+              <li>
+                <strong>
+                  Technology:
+                </strong>
+                Ruby on Rails, Bootstrap, Haml, Sass, JQuery, SQL, RSpec
+              </li>
+              <li>
+                <strong>
+                  Customer:
+                </strong>
+                <a href="https://www.opensuse.org/">openSUSE</a>,
+                <a href="https://www.gnome.org/">GNOME</a>,
+                <a href="https://owncloud.org/">ownCloud</a>
+              </li>
+              <li>
+                <strong>
+                  Online:
+                </strong>
+                <a href="http://osem.io">http://osem.io</a>
+              </li>
+            </ul>
+          </div>
+          <div class="col-md-6">
+            <a href="http://osem.io"><img alt="Open Source Event Manager" src="/images/hacks/osem.jpg" class="img-responsive">
+            </a>
+          </div>
+      </div>
     </div>
+  </section>
+  <section>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6">
+          <a href="http://openbuildservice.org"><img alt="Open Build Service" src="/images/hacks/obs.jpg" class="img-responsive">
+          </a>
+        </div>
+        <div class="col-md-6">
+          <h2>
+            Open Build Service - Software build system
+          </h2>
+          <hr>
+          <p>
+            A generic system to build and distribute Linux binaries from source code
+            in an automatic, consistent and reproducible way. Helps Free Software
+            developers to ship applications as well as updates, appliances and entire
+            distributions for a wide range of Linux operating systems and hardware
+            architectures. I am responsible for the ruby on rails part.
+          </p>
+          <ul>
+            <li>
+              <strong>
+                Role:
+              </strong>
+              Full Stack Developer
+            </li>
+            <li>
+              <strong>
+                Platform:
+              </strong>
+              Web
+            </li>
+            <li>
+              <strong>
+                Technology:
+              </strong>
+              Ruby on Rails, JQuery, SQL, Minitest, Perl, Bash
+            </li>
+            <li>
+              <strong>
+                Customer:
+              </strong>
+              <a href="https://www.suse.com/">SUSE</a>,
+              <a href="https://www.opensuse.org/">openSUSE,</a>
+              <a href="http://www.linuxfoundation.org/">Linux Foundation,</a>
+              <a href="https://www.tizen.org/">Tizen,</a>
+              <a href="http://www.intel.com/">Intel</a>
+            </li>
+            <li>
+              <strong>
+                Online:
+              </strong>
+              <a href="http://openbuildservice.org">http://openbuildservice.org</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6">
+          <h2>
+            openSUSE
+          </h2>
+          <hr>
+          <p>
+            A stable, easy to use and multi-purpose Linux based
+            operating system. Helps people to get all their of computing done, from
+            browsing facebook to developing complex applications.
+            I was part of the group of engineers that launched this
+            community in 2005 and I'm still a member with various roles today. I maintain
+            software packages that are included in the OS, I administer several
+            servers/applications that the project utilizes and I contribute to the promotion
+            by writing, speaking and evangelizing about it.
+          </p>
+          <ul>
+            <li>
+              <strong>
+                Roles:
+              </strong>
+              Developer, Admin, Community Manager, Editor
+            </li>
+            <li>
+              <strong>
+                Technology:
+              </strong>
+              Linux, Apache, Postfix, Wordpress, Mediawiki, RPM, Open Build Service,
+              Chef, Github, IRC, Bugzilla
+            </li>
+            <li>
+              <strong>
+                Online:
+              </strong>
+              <a href="http://opensuse.org">http://opensuse.org</a>
+            </li>
+          </ul>
+        </div>
+        <div class="col-md-6">
+          <a href="http://opensuse.org"><img alt="openSUSE Linux" src="/images/hacks/opensuse.jpg" class="img-responsive">
+          </a>
+        </div>
+      </div>
+    </div>
+  </section>
   </div>
 </section>
