Add my ugly face to about...

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -9,22 +9,13 @@
   <div class='container'>
     <div class='row'>
       <div class='col-md-4'>
-        <h1 id='callout'>
-          Tout like
-          a Butterfly,
-          Hack like
-          a Bee!
-        </h1>
+        <h3 class="text-muted">
+          Henne Vogelsang
+        </h3>
+        <img src="/images/henne.png" class="img-responsive">
       </div>
       <div class='col-md-4'>
-        <h3 class='text-muted' id='headline'>Henne Vogelsang</h3>
-        <p class="lead">
-          I am a
-          <b>
-            full stack developer
-          </b>
-          of the modern web.
-        </p>
+        <h3 class='text-muted'>full stack developer of the modern web</h3>
         <p>
           I express my apps business values in RSpec, capture it's behaviour in
           Ruby on Rails models and help Humans to interact with it's data through mobile first,
@@ -59,8 +50,8 @@
         </p>
       </div>
       <div class='col-md-4'>
-        <h3 class='text-muted' id='headline'>
-          Things I Do
+        <h3 class='text-muted'>
+          and more...
         </h3>
         <canvas id='myChart'></canvas>
         <ol>
