--- a/_includes/posts_carousel.html
+++ b/_includes/posts_carousel.html
@@ -35,13 +35,15 @@
 </div>
 
 <div class='row'>
-  <div class='col-md-5 text-center'>
+  <div class='col-md-3 text-center'>
     <hr />
   </div>
-  <div class='col-md-2 text-center'>
-    <a href="all">All Posts</a>
+  <div class='col-md-6 text-center'>
+    <a href="/blog">
+      All Posts
+    </a>
   </div>
-  <div class='col-md 5 text-center'>
+  <div class='col-md-3 text-center'>
     <hr />
   </div>
 </div>
