--- a/_includes/blog.html
+++ b/_includes/blog.html
@@ -2,7 +2,7 @@
   <div class='container-fluid'>
     <div class='row'>
       <div class='col-md-6'>
-        <h4 class='text-muted'>From the blog</h4>
+        <h4 class='text-muted'>Things I write</h4>
       </div>
     </div>
   </div>
