--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,6 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
-    <link rel="stylesheet" type="text/css" href="/js/slick/slick.css"/>
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
     <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" />
   </head>
@@ -19,8 +18,15 @@
     <script type="text/javascript" src="//oss.maxcdn.com/jquery/2.1.4/jquery.min.js"></script>
     <script type="text/javascript" src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="//oss.maxcdn.com/chart.js/1.0.2/Chart.min.js"></script>
+    <script type="text/javascript" src="//oss.maxcdn.com/jquery.jscroll/2.2.4/jquery.jscroll.min.js"></script>
     <script type="text/javascript" src="/js/chart.js"></script>
 
+    <script type="text/javascript">
+    // content selector is used to extract the additional items
+    $('#posts').jscroll({
+        contentSelector: "#posts",
+        nextSelector: '.next'
+    });
     </script>
   </body>
 </html>
