Make the footer dark

--- a/css/main.scss
+++ b/css/main.scss
@@ -83,7 +83,8 @@ body {
   width: 100%;
   /* Set the fixed height of the footer here */
   height: 400px;
-  background-color: #f5f5f5;
+  color: #F8F8FF;
+  background-color: #1F1F1F;
 }
 
 @media (min-width: $screen-sm-min ) and (max-width: $screen-sm-max) {
