Add a navbar on top

--- a/_sass/_linea.scss
+++ b/_sass/_linea.scss
@@ -53,167 +53,176 @@
 }
 
 .linea-check:before {
-  content: "b";
+  content: "\62";
 }
 .linea-flash:before {
-  content: "c";
+  content: "\63";
 }
 .linea-clock:before {
-  content: "a";
+  content: "\61";
 }
 .linea-cloud:before {
-  content: "d";
+  content: "\64";
 }
 .linea-heart:before {
-  content: "e";
+  content: "\65";
 }
 .linea-heart-broken:before {
-  content: "f";
+  content: "\66";
 }
 .linea-lightbulb:before {
-  content: "g";
+  content: "\67";
 }
 .linea-link:before {
-  content: "h";
+  content: "\68";
 }
 .linea-comment:before {
-  content: "i";
+  content: "\69";
 }
 .linea-comments:before {
-  content: "j";
+  content: "\6a";
 }
 .linea-paperplane:before {
-  content: "k";
+  content: "\6b";
 }
 .linea-pin:before {
-  content: "l";
+  content: "\6c";
 }
 .linea-feed:before {
-  content: "m";
+  content: "\6d";
 }
 .linea-settings:before {
-  content: "n";
+  content: "\6e";
 }
 .linea-share:before {
-  content: "o";
+  content: "\6f";
 }
 .linea-star:before {
-  content: "p";
+  content: "\70";
 }
 .linea-trash:before {
-  content: "q";
+  content: "\71";
 }
 .linea-watch-2:before {
-  content: "r";
+  content: "\72";
 }
 .linea-globe:before {
-  content: "s";
+  content: "\73";
 }
 .linea-comment-add:before {
-  content: "u";
+  content: "\75";
 }
 .linea-comment-delete:before {
-  content: "v";
+  content: "\76";
 }
 .linea-clipboard:before {
-  content: "t";
+  content: "\74";
 }
 .linea-money:before {
-  content: "w";
+  content: "\77";
 }
 .linea-cart:before {
-  content: "x";
+  content: "\78";
 }
 .linea-ruby:before {
-  content: "y";
+  content: "\79";
 }
 .linea-ticket:before {
-  content: "z";
+  content: "\7a";
 }
 .linea-mc:before {
-  content: "A";
+  content: "\41";
 }
 .linea-pen:before {
-  content: "B";
+  content: "\42";
 }
 .linea-carret-left:before {
-  content: "C";
+  content: "\43";
 }
 .linea-doublecarret-left:before {
-  content: "D";
+  content: "\44";
 }
 .linea-carret-right:before {
-  content: "E";
+  content: "\45";
 }
 .linea-doublecarret-right:before {
-  content: "F";
+  content: "\46";
 }
 .linea-close:before {
-  content: "G";
+  content: "\47";
 }
 .linea-carret-up:before {
-  content: "H";
+  content: "\48";
 }
 .linea-doublecarret-up:before {
-  content: "I";
+  content: "\49";
 }
 .linea-bookmark:before {
-  content: "J";
+  content: "\4a";
 }
 .linea-horn:before {
-  content: "K";
+  content: "\4b";
 }
 .linea-tag:before {
-  content: "L";
+  content: "\4c";
 }
 .linea-tags:before {
-  content: "M";
+  content: "\4d";
 }
 .linea-music:before {
-  content: "N";
+  content: "\4e";
 }
 .linea-present:before {
-  content: "P";
+  content: "\50";
 }
 .linea-clipboard-pen:before {
-  content: "Q";
+  content: "\51";
 }
 .linea-book-pen:before {
-  content: "R";
+  content: "\52";
 }
 .linea-hamburger:before {
-  content: "T";
+  content: "\54";
 }
 .linea-list:before {
-  content: "U";
+  content: "\55";
 }
 .linea-carret-down:before {
-  content: "V";
+  content: "\56";
 }
 .linea-doublecarret-down:before {
-  content: "W";
+  content: "\57";
 }
 .linea-anchor:before {
-  content: "X";
+  content: "\58";
 }
 .linea-help:before {
-  content: "Y";
+  content: "\59";
 }
 .linea-picture:before {
-  content: "1";
+  content: "\31";
 }
 .linea-video:before {
-  content: "2";
+  content: "\32";
 }
 .linea-quote:before {
-  content: "3";
+  content: "\33";
 }
 .linea-linkedin:before {
-  content: "Z";
+  content: "\5a";
 }
 .linea-github:before {
-  content: "0";
+  content: "\30";
 }
 .linea-twitter:before {
-  content: "O";
+  content: "\4f";
+}
+.linea-android:before {
+  content: "\34";
+}
+.linea-linux:before {
+  content: "\35";
+}
+.linea-blog:before {
+  content: "\36";
 }
