Some work on the layout

--- a/_includes/hacks.html
+++ b/_includes/hacks.html
@@ -2,7 +2,7 @@
   <div class='container-fluid'>
     <div class='row'>
       <div class='col-md-6'>
-        <h4 class='text-muted'>Things I hack</h4>
+        <h4 class='text-muted'>Things I hack - Portfolio</h4>
       </div>
     </div>
   </div>
@@ -162,7 +162,7 @@
           </ul>
         </div>
         <div class="col-md-6">
-          <a href="http://opensuse.org"><img alt="openSUSE Linux" src="/images/hacks/opensuse.jpg" class="img-responsive">
+          <a href="http://opensuse.org"><img alt="openSUSE Linux" src="/images/hacks/opensuse.png" class="img-responsive">
           </a>
         </div>
       </div>
