--- a/_includes/about.html
+++ b/_includes/about.html
@@ -2,7 +2,7 @@
   <div class='container-fluid'>
     <div class='row'>
       <div class='col-md-6'>
-        <h4 class='text-muted'>About me</h4>
+        <h4 class='text-muted'>Things I am - About</h4>
       </div>
     </div>
   </div>
