--- a/_includes/blog.html
+++ b/_includes/blog.html
@@ -2,13 +2,22 @@
   <div class='container-fluid'>
     <div class='row'>
       <div class='col-md-6'>
-        <h4 class='text-muted'>Things I write</h4>
+        <h4 class='text-muted'>Things I write - Blog</h4>
       </div>
     </div>
   </div>
   <div class='container'>
     <div class='row'>
       <div class='col-md-6' id='feature'>
+        <div class='row'>
+          <div class='col-md-12'>
+              {% if post.image %}
+                <img class='img-responsive img-rounded center-block' src='/images/posts/{{ site.posts.first.image }}'>
+              {% else %}
+                <img class='img-responsive img-rounded center-block' src="http://lorempixel.com/g/750/382/technics?{{post.path}}">
+              {% endif %}
+          </div>
+        </div>
         <div class='row'>
           <div class='col-md-12'>
             <h2>
@@ -19,10 +28,10 @@
         <div class='row'>
           <div class='col-md-12'>
             <p class="small">
-              <span class='linea-pin' title='Posted at'></span>
-              {{ site.posts.first.date | date: "%B %d, %Y" }}
+              published at
+              {{ site.posts.first.date | date_to_long_string }}
               {% if site.posts.first.tags.size > 0 %}
-                <span class='linea-tag' title='Tagged with'></span>
+                in
               {% endif %}
               {% for tag in site.posts.first.tags %}
                 <a href="/tag/{{ tag }}">{{ tag }}{% if !forloop.first %}, {% endif %}</a>
@@ -32,25 +41,17 @@
         </div>
         <div class='row'>
           <div class='col-md-12'>
-            <div class='thumbnail'>
-              <img class='img-responsive' src='/images/posts/{{ site.posts.first.image }}'>
-            </div>
-          </div>
-        </div>
-        <div class='row'>
-          <div class='col-md-12'>
             <div class='lead'>
               {{ site.posts.first.excerpt }}
             </div>
             <p class="text-right">
-              <a href="{{ site.posts.first.url | prepend: site.baseurl }}">Read more...</a>
+              <a href="{{ site.posts.first.url | prepend: site.baseurl }}#more">Continue reading...</a>
             </p>
           </div>
         </div>
 
       </div>
-      <div class='col-md-5 col-md-offset-1'>
-        <h2>&nbsp;</h2>
+      <div class='col-md-4 col-md-offset-2'>
         {% include posts_carousel.html %}
       </div>
     </div>
