--- a/_includes/posts_carousel.html
+++ b/_includes/posts_carousel.html
@@ -1,49 +1,51 @@
 <div class='row'>
   <div class='col-md-12 text-center'>
+    <h3>
+      <a href="/blog">
+        Other Posts
+      </a>
+    </h3>
     <hr />
   </div>
 </div>
 
 <div id="post-carousel">
   {% for post in site.posts offset:1 limit:4 %}
-    <div class="post">
-      <div class='row'>
-        <div class='col-md-4'>
+    <div class="media">
+      <div class="media-left media-middle">
+        <a href="#">
           {% if post.image %}
-            <img class='img-circle img-center' src="/images/posts/{{ post.image }}" width="100px" height="100px" />
+            <img class='img-circle media-object' src="/images/posts/{{ post.image }}" width="120px" height="120px" />
           {% else %}
-            <img class='img-circle img-center' src="/images/circle.png" width="100px" height="100px" />
+            <img class='img-circle media-object' src="/images/circle.png" width="120px" height="120px" />
           {% endif %}
-        </div>
-        <div class='col-md-8'>
-          <h3>
-            <a class="post-link" href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a>
-          </h3>
-          <span class='linea-pin'></span>
-          {{ post.date | date: "%b %-d, %Y" }}
-          <br />
-          {% if posts.tags.size > 0 %}
-            <span class='linea-tag' title='Tagged with'></span>
-          {% endif %}
-          {% for tag in posts.tags %}
-            <a href="/tag/{{ tag }}">{{ tag }}{% if !forloop.first %}, {% endif %}</a>
-          {% endfor %}
-        </div>
+        </a>
+      </div>
+      <div class="media-body">
+        <h4 class="media-heading">
+          <a class="post-link" href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a>
+        </h4>
+        <p>
+          <small>
+            published {{ post.date | date_to_long_string }}
+            in
+            {% for tag in post.tags %}
+              <a href="/tag/{{ tag }}">{{ tag }}{% unless forloop.last %}, {% endunless %}</a>
+            {% endfor %}
+          </small>
+        </p>
       </div>
     </div>
-    {% endfor %}
+  {% endfor %}
 </div>
 
 <div class='row'>
-  <div class='col-md-3 text-center'>
+  <div class='col-md-12 text-center'>
     <hr />
-  </div>
-  <div class='col-md-6 text-center'>
-    <a href="/blog">
-      All Posts
-    </a>
-  </div>
-  <div class='col-md-3 text-center'>
-    <hr />
+    <h3 class="text-right">
+      <a href="/blog">
+        All Posts
+      </a>
+    </h3>
   </div>
 </div>
