--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,8 +26,10 @@
     <script type="text/javascript">
     // content selector is used to extract the additional items
     $('#posts').jscroll({
+        loadingHtml: '<p class="text-center"><img src="/images/loader.gif" alt="Loading" /></p>',
         contentSelector: "#posts",
-        nextSelector: '.next'
+        nextSelector: '.next:last',
+        debug: true
     });
     </script>
   </body>
