--- a/_sass/_post.scss
+++ b/_sass/_post.scss
@@ -39,6 +39,13 @@
       @extend .table-striped;
       @extend .table-hover;
     }
+
+  #more {
+      display: block;
+      position: relative;
+      top: -80px;
+      visibility: hidden;
+    }
   }
 
   @media (min-width: $screen-xs-min) {
