--- a/_includes/posts_carousel.html
+++ b/_includes/posts_carousel.html
@@ -1,9 +1,7 @@
 <div class='row'>
   <div class='col-md-12 text-center'>
     <h3>
-      <a href="/blog">
-        Other Posts
-      </a>
+      Other Posts
     </h3>
     <hr />
   </div>
@@ -12,15 +10,6 @@
 <div id="post-carousel">
   {% for post in site.posts offset:1 limit:4 %}
     <div class="media">
-      <div class="media-left media-middle">
-        <a href="#">
-          {% if post.image %}
-            <img class='img-circle media-object' src="/images/posts/{{ post.image }}" width="120px" height="120px" />
-          {% else %}
-            <img class='img-circle media-object' src="/images/circle.png" width="120px" height="120px" />
-          {% endif %}
-        </a>
-      </div>
       <div class="media-body">
         <h4 class="media-heading">
           <a class="post-link" href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a>
@@ -44,7 +33,7 @@
     <hr />
     <h3 class="text-right">
       <a href="/blog">
-        All Posts
+        Read all {{ site.posts.size }} posts from my blog
       </a>
     </h3>
   </div>
