--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,7 +25,7 @@
 
     <script type="text/javascript">
     // content selector is used to extract the additional items
-    $('#posts').jscroll({
+    $('.jscroll').jscroll({
         loadingHtml: '<p class="text-center"><img src="/images/loader.gif" alt="Loading" /></p>',
         contentSelector: "#posts",
         nextSelector: '.next:last',
