--- a/_includes/posts_carousel.html
+++ b/_includes/posts_carousel.html
@@ -19,7 +19,7 @@
             published {{ post.date | date_to_long_string }}
             in
             {% for tag in post.tags %}
-              <a href="/tag/{{ tag }}">{{ tag }}{% unless forloop.last %}, {% endunless %}</a>
+              <a href="/blog/tag/{{ tag }}">{{ tag }}{% unless forloop.last %}, {% endunless %}</a>
             {% endfor %}
           </small>
         </p>
