--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -23,7 +23,7 @@ layout: default
             in
           {% endif %}
           {% for tag in page.tags %}
-            <a href="/tag/{{ tag }}">
+            <a href="/blog/tag/{{ tag }}">
               {{ tag }}
             </a>
               {% if forloop.size > 1  %}
