Remove titlecase from OSEM description

--- a/_includes/hacks.html
+++ b/_includes/hacks.html
@@ -15,7 +15,7 @@
             </h2>
             <hr>
             <p>
-              An Event Management App Tailored to Free Software Conferences. Helps organizers
+              An event management app tailored to Free Software conferences. Helps organizers
               with paper submission, marketing and analytics of events. I contribute to all
               aspects of this app. From the backend over the user interface to the the landing
               page.
