Beautify some details of navigation

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -13,10 +13,10 @@
       </div>
       <div class='col-md-3 col-md-offset-2 col-sm-3 col-sm-offset-2'>
         <h2>Follow me</h2>
-        <ul class="list-unstyled">
-          <li><a href="https://twitter.com/henne"><span class='linea-twitter' title='Twitter'></span> Twitter</a></li>
-          <li><a href="https://de.linkedin.com/in/hennevogel"><span class='linea-linkedin' title='LinkedIn'></span> LinkedIn</a></li>
-          <li><a href="https://github.com/hennevogel"><span class='linea-github' title='GitHub'></span> GitHub</a></li>
+        <ul class="list-inline">
+          <li><a href="https://twitter.com/henne"><span class='linea-twitter linea-2x' title='Twitter'></span></a></li>
+          <li><a href="https://de.linkedin.com/in/hennevogel"><span class='linea-linkedin linea-2x' title='LinkedIn'></span></a></li>
+          <li><a href="https://github.com/hennevogel"><span class='linea-github linea-2x' title='GitHub'></span></a></li>
         </ul>
       </div>
     </div>
@@ -24,7 +24,20 @@
       <div class='col-md-12'>
         <p class='muted text-center small'>
           <span class='glyphicon glyphicon-copyright-mark'></span>
-          Hendrik Vogelsang
+          <a href="https://www.hennevogel.de">
+            Hendrik Vogelsang
+          </a>
+          &middot;
+          <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">
+            <img alt="Licensed CC-BY-SA of not otherwise expressed"
+                 title="Licensed CC-BY-SA of not otherwise expressed"
+                 src="https://i.creativecommons.org/l/by-sa/4.0/80x15.png"
+            />
+          </a>
+          &middot;
+          <a href="https://github.com/hennevogel/hennevogel.de/issues">
+            Feedback
+          </a>
         </p>
       </div>
     </div>
