--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -2,22 +2,21 @@
   <div class="container">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse-1" aria-expanded="false">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-scroll" aria-expanded="false">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
       <a class="navbar-brand" href="/">
-        <img src="/images/logo.png" width="70%" class="img-responsive">
+        <img src="/images/logo.png" id='logo'>
       </a>
     </div>
-    <div class="collapse navbar-collapse" id="navbar-collapse-1">
+    <div id="navbar-scroll" class="collapse navbar-collapse">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="/blog"><span class='linea-blog linea-2x' title='Blog'></span></a></li>
-        <li><a href="https://twitter.com/henne"><span class='linea-twitter linea-2x' title='Twitter'></span></a></li>
-        <li><a href="https://github.com/hennevogel"><span class='linea-github linea-2x' title='GitHub'></span></a></li>
-        <li><a href="https://de.linkedin.com/in/hennevogel"><span class='linea-linkedin linea-2x' title='LinkedIn'></span></a></li>
+        <li><a href="/#about">About</a></li>
+        <li><a href="/#hacks">Portfolio</a></li>
+        <li><a href="/blog">Blog</a></li>
       </ul>
     </div>
   </div>
