--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
     <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" />
   </head>
 
-  <body>
+  <body data-spy="scroll" data-target="#navbar-scroll">
 
     {% include navigation.html %}
 
