--- a/_sass/_blog.scss
+++ b/_sass/_blog.scss
@@ -1,5 +1,6 @@
 #blog {
-  padding: 60px 0 60px 0;
+  padding: $navbar-height 0 $navbar-height 0;
+
   #feature {
     .thumbnail {
       margin-bottom: 20px;
