Fix section padding

--- a/_includes/hacks.html
+++ b/_includes/hacks.html
@@ -6,7 +6,7 @@
       </div>
     </div>
   </div>
-  <section>
+  <div class="hack">
     <div class="container">
       <div class="row">
           <div class="col-md-6">
@@ -61,8 +61,8 @@
           </div>
       </div>
     </div>
-  </section>
-  <section>
+  </div>
+  <div class="hack">
     <div class="container">
       <div class="row">
         <div class="col-md-6">
@@ -120,8 +120,8 @@
         </div>
       </div>
     </div>
-  </section>
-  <section>
+  </div>
+  <div class="hack">
     <div class="container">
       <div class="row">
         <div class="col-md-6">
@@ -167,6 +167,6 @@
         </div>
       </div>
     </div>
-  </section>
+  </div>
   </div>
 </section>
