Seperate the carousel a bit more from the feature

--- a/_sass/_blog.scss
+++ b/_sass/_blog.scss
@@ -5,6 +5,10 @@
     }
   }
   #post-carousel {
+    border-left-style: solid;
+    border-width: 1px;
+    border-color: #eeeeee;
+    padding-left: 10px;
     .media {
       padding: 10px 0 10px;
     }
