--- a/_includes/posts_carousel.html
+++ b/_includes/posts_carousel.html
@@ -1,13 +1,13 @@
-<div class='row'>
-  <div class='col-md-12 text-center'>
-    <h3>
-      Other Posts
-    </h3>
-    <hr />
-  </div>
-</div>
-
 <div id="post-carousel">
+  <div class='row'>
+    <div class='col-md-12 text-center'>
+      <h3>
+        Other Posts
+      </h3>
+      <hr />
+    </div>
+  </div>
+
   {% for post in site.posts offset:1 limit:4 %}
     <div class="media">
       <div class="media-body">
@@ -26,15 +26,15 @@
       </div>
     </div>
   {% endfor %}
-</div>
 
-<div class='row'>
-  <div class='col-md-12 text-center'>
-    <hr />
-    <h3 class="text-right">
-      <a href="/blog">
-        Read all {{ site.posts.size }} posts from my blog
-      </a>
-    </h3>
+  <div class='row'>
+    <div class='col-md-12 text-center'>
+      <hr />
+      <h3 class="text-right">
+        <a href="/blog">
+          Read all {{ site.posts.size }} posts »
+        </a>
+      </h3>
+    </div>
   </div>
 </div>
