--- a/_includes/blog.html
+++ b/_includes/blog.html
@@ -10,19 +10,19 @@
     <div class='row'>
       <div class='col-md-8' id='feature'>
         <div class='row'>
+          <div class='row'>
+            <div class='col-md-12'>
+              <h2>
+                <a class="post-link" href="{{ site.posts.first.url | prepend: site.baseurl }}">{{ site.posts.first.title }}</a>
+              </h2>
+            </div>
+          </div>
           <div class='col-md-12'>
-              {% if post.image %}
+              {% if site.posts.first.image %}
                 <img class='img-responsive img-rounded center-block' src='/images/posts/{{ site.posts.first.image }}'>
               {% else %}
-                <img class='img-responsive img-rounded center-block' src="http://lorempixel.com/g/750/382/technics?{{post.path}}">
+                <img class='img-responsive img-rounded center-block' src="//lorempixel.com/g/750/382/technics?{{post.path}}">
               {% endif %}
-          </div>
-        </div>
-        <div class='row'>
-          <div class='col-md-12'>
-            <h2>
-              <a class="post-link" href="{{ site.posts.first.url | prepend: site.baseurl }}">{{ site.posts.first.title }}</a>
-            </h2>
           </div>
         </div>
         <div class='row'>
