Some minor fixes to the blog index

--- a/_sass/_posts.scss
+++ b/_sass/_posts.scss
@@ -1,8 +1,8 @@
 #posts {
-  padding-top: 30px;
-
   article {
-    padding: 20px 0 20px;
+    padding: $navbar-height 0 $navbar-height 0;
   }
-  article:nth-child(even) {background: #F7F7F7}
+  article:nth-of-type(1) { padding-top: 0 }
+  article:nth-last-of-type(1) { padding-bottom: 0 }
+  article:nth-child(even) { background: #F7F7F7 }
 }
