Move post markup to an include

--- a/_layouts/tag.html
+++ b/_layouts/tag.html
@@ -2,40 +2,8 @@
 layout: default
 ---
 
-<div id="posts">
+<section id="posts">
   {% for post in page.posts %}
-    <article>
-      <div class="container">
-        <div class="row">
-          <div class="col-md-8 col-md-offset-2">
-            <a href="{{ site.siteurl }}{{ post.url }}">
-              {% if post.image %}
-                <img class='img-responsive img-rounded center-block' src='/images/posts/{{ post.image }}'>
-              {% else %}
-                <img class='img-responsive img-rounded center-block' src="http://lorempixel.com/g/750/382/technics?{{post.path}}">
-              {% endif %}
-            </a>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-8 col-md-offset-2">
-            <h2>
-              <a href="{{ site.siteurl }}{{ post.url }}">
-                {{ post.title }}
-              </a>
-            </h2>
-            <p class="text-muted">
-              published {{ post.date | date_to_long_string }}
-            </p>
-            <div class="lead">
-              {{ post.excerpt }}
-            </div>
-            <p class="text-right">
-              <a href="{{ site.siteurl }}{{ post.url }}#more">Continue reading...</a>
-            </p>
-          </div>
-        </div>
-      </div>
-    </article>
+    {% include post.html %}
   {% endfor %}
-</div>
+</section>
