--- a/_includes/blog.html
+++ b/_includes/blog.html
@@ -28,14 +28,7 @@
         <div class='row'>
           <div class='col-md-12'>
             <p class="small">
-              published at
-              {{ site.posts.first.date | date_to_long_string }}
-              {% if site.posts.first.tags.size > 0 %}
-                in
-              {% endif %}
-              {% for tag in site.posts.first.tags %}
-                <a href="/blog/tag/{{ tag }}">{{ tag }}{% if !forloop.first %}, {% endif %}</a>
-              {% endfor %}
+              {% include post_meta.html date=site.posts.first.date tags=site.posts.first.tags %}
             </p>
           </div>
         </div>
