--- a/_includes/post_excerpt.html
+++ b/_includes/post_excerpt.html
@@ -21,7 +21,7 @@
     <div class="row">
       <div class="col-md-8 col-md-offset-2">
         <p class="text-muted">
-          published {{ post.date | date_to_long_string }}
+          {% include post_meta.html date=post.date tags=post.tags %}
         </p>
         <div class="lead">
           {{ post.excerpt }}
