--- a/_includes/posts_carousel.html
+++ b/_includes/posts_carousel.html
@@ -16,11 +16,7 @@
         </h4>
         <p>
           <small>
-            published {{ post.date | date_to_long_string }}
-            in
-            {% for tag in post.tags %}
-              <a href="/blog/tag/{{ tag }}">{{ tag }}{% unless forloop.last %}, {% endunless %}</a>
-            {% endfor %}
+            {% include post_meta.html date=post.date tags=post.tags %}
           </small>
         </p>
       </div>
