--- a/_includes/hacks.html
+++ b/_includes/hacks.html
@@ -9,7 +9,11 @@
   <div class="hack">
     <div class="container">
       <div class="row">
-          <div class="col-md-6">
+          <div class="col-md-6 col-md-push-6">
+            <a href="http://osem.io"><img alt="Open Source Event Manager" src="/images/hacks/osem.jpg" class="img-responsive">
+            </a>
+          </div>
+          <div class="col-md-6 col-md-pull-6">
             <h2>
               OSEM - Event Management App
             </h2>
@@ -54,10 +58,6 @@
                 <a href="http://osem.io">http://osem.io</a>
               </li>
             </ul>
-          </div>
-          <div class="col-md-6">
-            <a href="http://osem.io"><img alt="Open Source Event Manager" src="/images/hacks/osem.jpg" class="img-responsive">
-            </a>
           </div>
       </div>
     </div>
@@ -124,7 +124,11 @@
   <div class="hack">
     <div class="container">
       <div class="row">
-        <div class="col-md-6">
+        <div class="col-md-6 col-md-push-6">
+          <a href="http://opensuse.org"><img alt="openSUSE Linux" src="/images/hacks/opensuse.png" class="img-responsive">
+          </a>
+        </div>
+        <div class="col-md-6 col-md-pull-6">
           <h2>
             openSUSE
           </h2>
@@ -160,10 +164,6 @@
               <a href="http://opensuse.org">http://opensuse.org</a>
             </li>
           </ul>
-        </div>
-        <div class="col-md-6">
-          <a href="http://opensuse.org"><img alt="openSUSE Linux" src="/images/hacks/opensuse.png" class="img-responsive">
-          </a>
         </div>
       </div>
     </div>
