Shorten the about text

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -40,13 +40,12 @@
           A massive Ruby on Rails/Perl application.
         </p>
         <p>
-          In my free time I practice my skills by developing an event organization app, the
+          In my spare time I practice my skills by developing an event organization app, the
           <a href="http://osem.io">Open Source Event Manager</a>,
           by operating a lot of the server infrastructure of the
           <a href="http://opensuse.org">openSUSE project</a>,
           and by teaching free software development with programs such as
           <a href="http://railsgirlssummerofcode.org/">RailsGirls Summer of Code</a>.
-          When I'm not hacking you'll find me either hiking the world or in the next football stadium.
         </p>
       </div>
       <div class='col-md-4'>
