--- a/_sass/_posts.scss
+++ b/_sass/_posts.scss
@@ -1,6 +1,19 @@
 #posts {
   article {
     padding: $navbar-height 0 $navbar-height 0;
+    .excerpt {
+      padding-top: 40px;
+    }
+    @media(min-width: $screen-sm-min) {
+      h1 {
+        font-size: $font-size-base * 4
+      }
+    }
+    @media(min-width: $screen-md-min) {
+      h1 {
+        font-size: $font-size-base * 5
+      }
+    }
   }
   article:nth-of-type(1) { padding-top: 0 }
   article:nth-last-of-type(1) { padding-bottom: 0 }
