Add web sign-in links

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,15 +8,15 @@
           Shoot me an email and I'll get back to you!
         </p>
         <p>
-          <a href='mailto:hvogel@hennevogel.de'>hvogel@hennevogel.de</a>
+          <a href='mailto:hvogel@hennevogel.de' rel="me">hvogel@hennevogel.de</a>
         </p>
       </div>
       <div class='col-md-3 col-md-offset-2 col-sm-3 col-sm-offset-2'>
         <h2>Follow me</h2>
         <ul class="list-inline">
-          <li><a href="https://twitter.com/henne"><span class='linea-twitter linea-2x' title='Twitter'></span></a></li>
-          <li><a href="https://github.com/hennevogel"><span class='linea-github linea-2x' title='GitHub'></span></a></li>
-          <li><a href="https://de.linkedin.com/in/hennevogel"><span class='linea-linkedin linea-2x' title='LinkedIn'></span></a></li>
+          <li><a href="https://twitter.com/henne" rel="me"><span class='linea-twitter linea-2x' title='Twitter'></span></a></li>
+          <li><a href="https://github.com/hennevogel" rel="me"><span class='linea-github linea-2x' title='GitHub'></span></a></li>
+          <li><a href="https://de.linkedin.com/in/hennevogel" rel="me"><span class='linea-linkedin linea-2x' title='LinkedIn'></span></a></li>
         </ul>
       </div>
     </div>
