Add contact vcard

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,15 +8,16 @@
           Shoot me an email and I'll get back to you!
         </p>
         <p>
-          <a href='mailto:hvogel@hennevogel.de' rel="me">hvogel@hennevogel.de</a>
+          <a href='mailto:hvogel@hennevogel.de' rel="me" class="email">hvogel@hennevogel.de</a>
         </p>
       </div>
       <div class='col-md-3 col-md-offset-2 col-sm-3 col-sm-offset-2'>
         <h2>Follow me</h2>
         <ul class="list-inline">
-          <li><a href="https://twitter.com/henne" rel="me"><span class='linea-twitter linea-2x' title='Twitter'></span></a></li>
-          <li><a href="https://github.com/hennevogel" rel="me"><span class='linea-github linea-2x' title='GitHub'></span></a></li>
-          <li><a href="https://de.linkedin.com/in/hennevogel" rel="me"><span class='linea-linkedin linea-2x' title='LinkedIn'></span></a></li>
+          <li><a href="https://hennevogel.de/feed.xml" rel="me"><span class='linea-blog linea-2x' title='Blog'></span></a></li>
+          <li><a href="https://twitter.com/henne" rel="me" class="u-url"><span class='linea-twitter linea-2x' title='Twitter'></span></a></li>
+          <li><a href="https://github.com/hennevogel" rel="me" class="u-url"><span class='linea-github linea-2x' title='GitHub'></span></a></li>
+          <li><a href="https://de.linkedin.com/in/hennevogel" rel="me" class="u-url"><span class='linea-linkedin linea-2x' title='LinkedIn'></span></a></li>
         </ul>
       </div>
     </div>
@@ -24,7 +25,7 @@
       <div class='col-md-12'>
         <p class='muted text-center small'>
           <span class='glyphicon glyphicon-copyright-mark'></span>
-          <a href="https://www.hennevogel.de">
+          <a href="https://hennevogel.de" class="fn u-url">
             Hendrik Vogelsang
           </a>
           &middot;
@@ -43,3 +44,4 @@
     </div>
   </div>
 </div>
+</div> <!-- Closing the vcard div in _includes/about.html -->
