--- a/_includes/about.html
+++ b/_includes/about.html
@@ -12,11 +12,11 @@
         <h3 class="text-muted">
           Henne Vogelsang
         </h3>
-        <img src="/images/henne.png" class="img-responsive">
+        <img src="/images/henne.png" class="img-responsive u-photo">
       </div>
       <div class='col-md-4'>
         <h3 class='text-muted'>full stack developer of the modern web</h3>
-        <p>
+        <p class="p-note">
           I express my apps business values in RSpec, capture it's behaviour in
           Ruby on Rails models and help Humans to interact with it's data through mobile first,
           responsive and progressive enhanced HTML5, CSS3 and JavaScript driven user interfaces.
