--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -65,7 +65,7 @@ layout: default
 
 <script>
     var disqus_config = function () {
-        this.page.url = "{{ page.url | prepend: site.domain  }}";
+        this.page.url = "{{ page.url | prepend: site.url  }}";
         this.page.identifier = "{{ page.id }}";
     };
     (function() {
