--- a/css/main.scss
+++ b/css/main.scss
@@ -54,7 +54,7 @@ $footer-height: 400px;
 @import "bootstrap/media";
 // @import "bootstrap/list-group";
 // @import "bootstrap/panels";
-// @import "bootstrap/responsive-embed";
+@import "bootstrap/responsive-embed";
 // @import "bootstrap/wells";
 @import "bootstrap/close";
 
